2004-06-05  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:
	* src/CoverImage.cs:
	* src/StringUtils.cs:
	* src/muine.exe.config.in:

	Support non-ASCII filenames in cover image dnd.

2004-06-05  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:
	* src/CoverImage.cs:
	* src/Metadata.cs:
	* src/SongDatabase.cs:

	Fix native-to-managed string conversion.

2004-06-05  Jorn Baayen  <jbaayen@gnome.org>

	* src/EllipsizingLabel.cs:

	Fix GtkLabel warning on startup.

2004-06-05  Peter Johanson  <latexer@gentoo.org>
            fer
            Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/GettextCatalog.cs:
	* src/Player.cs:
	* src/Song.cs:
	* src/StockIcons.cs:
	* src/StringUtils.cs:

	Make work with latest mono and gtk#.

2004-05-13  Lee Willis   <lee@leewillis.co.uk>

	* libmuine/player-xine.c:

	Escape filename before passing to xine_open. Fixes #142434

2004-05-11  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:

	Bump version number to 0.6.1.99.
	
	* src/HandleView.cs:
	* src/MmKeys.cs:
	* src/Player.cs:
	* src/VolumeButton.cs:

	Kill GetObject usage.

2004-05-10  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* configure.in:
	* src/About.cs:

	Release 0.6.1.

2004-05-10  Jorn Baayen  <jbaayen@gnome.org>

	* src/Makefile.am:

	Set MONO_XMLSERIALIZER_THS to "no" for AmazonSearchService.cs
	generation. Works around Ximian Bugzilla #58194.

2004-05-09  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* src/Muine.cs: Add explicit namespace for "File" references since in
	gtk+ 2.4 there's now also a Gtk.File class.
	* src/PlaylistWindow.cs: Idem. Use MainContext.Pending () instead of 
	Global.EventsPending () since the latter has changed API from 2.2 to
	2.4.
	* src/ProgressWindow.cs: Idem.

2004-05-09  Jorn Baayen  <jbaayen@gnome.org>

	* src/About.cs:

	Use UTF-8 copyright symbol, and spell Viet Yen's name in proper 
	Vietnamese.
	
	* src/Makefile.am:

	Pass "-codepage:utf8" to mcs.
